# notification_bot_sender

./: Dockerfile  main.py  pyproject.toml
core/: config.py  logger.py
lib/: __init__.py
lib/models/: models.py
lib/routers/: notification.py
lib/scheduler/: __init__.py  builder.py  task_scheduler.py  telegram_scheduler.py
lib/sender/: keyboards.py  telegram_sender.py
